hphp/test/quick/SetOpProp.php.expectf
Test begin
C Object
(
    [p] => 1
    [a] => <a>
    [b] => <b><b>
    [q] => 1
    [r] => hello
)
Error: Setting a property on a non-object
Error: Setting a property on a non-object
Error: Setting a property on a non-object
Error: Setting a property on a non-object
Error: Setting a property on a non-object
Error: Setting a property on a non-object

Warning: Attempt to assign property of non-object in %s on line 37

Warning: Attempt to assign property of non-object in %s on line 38
42
Test end
